# versade

./: .gitignore  Dockerfile  INSTALLATION.md  PKGBUILD  README.md  cursor-mcp-config.json  cursor-mcp-dev-config.json  dev-setup.sh  docker-compose.yml  env.fish  install.py  mcp-config.json  pyproject.toml  requirements.txt  run.py  setup.py  smithery-manifest.json  test_new_features.py  test_server.py  test_tools.py  uvx.json
src/archive/: __init__.py  __main__.py  dep_checker_mcp.py
src/archive/api/: routes.py
src/archive/models/: __init__.py
src/archive/services/: checker.py  checker.py.bak
src/archive/versa/api/: __init__.py
src/archive/versa/models/: core.py
src/archive/versa/services/: checker.py
src/archive/versa/utils/: config.py
src/dep_checker_mcp/models/: core.py
src/dep_checker_mcp/services/: __init__.py
src/dep_checker_mcp/utils/: logging.py
src/versa/: __main__.py
src/versa/utils/: __init__.py
src/versade/: __init__.py  __main__.py  cli.py  server.py
src/versade/api/: __init__.py  app.py  routes.py
src/versade/services/: __init__.py  checker.py  history.py  research.py
src/versade/utils/: config.py  error_handling.py
tests/: conftest.py
tests/e2e/: conftest.py  test_api_endpoints.py  test_mcp_endpoints.py
tests/unit/: __init__.py  test_checker_service.py  test_dependency_checker.py
